<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.cmu-phil</groupId>
        <artifactId>tetrad</artifactId>
        <version>7.6.9</version>
    </parent>

    <artifactId>tetrad-gui</artifactId>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>resources/version</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>resources/version</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>edu.cmu.tetradapp.Tetrad</Main-Class>
                                        <Permissions>all-permissions</Permissions>
                                        <Implementation-Title>${project.name}</Implementation-Title>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>launch</shadedClassifierName> <!-- Any name that makes sense -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-site-plugin</artifactId>-->
            <!--                <version>3.4</version>-->
            <!--                <configuration>-->
            <!--                    <port>9000</port>-->
            <!--                    <tempWebappDirectory>${basedir}/target/site/tempdir</tempWebappDirectory>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-gpg-plugin</artifactId>-->
            <!--                <version>1.6</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>sign-artifacts</id>-->
            <!--                        <phase>verify</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>sign</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.sonatype.plugins</groupId>-->
            <!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
            <!--                <version>1.6.7</version>-->
            <!--                <extensions>true</extensions>-->
            <!--                <configuration>-->
            <!--                    <serverId>ossrh</serverId>-->
            <!--                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>-->
            <!--                    <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-source-plugin</artifactId>-->
            <!--                <version>2.2.1</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>attach-sources</id>-->
            <!--                        <goals>-->
            <!--                            <goal>jar-no-fork</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
            <!--                <version>2.9.1</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>attach-javadocs</id>-->
            <!--                        <goals>-->
            <!--                            <goal>jar</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.10</version>
            </extension>
        </extensions>


    </build>

    <dependencies>
        <dependency>
            <groupId>io.github.cmu-phil</groupId>
            <artifactId>tetrad-lib</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <!-- Used for deep copy dataset during determinism - Zhou -->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-lang3</artifactId>-->
        <!--            <version>3.12.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>jdepend</groupId>
            <artifactId>jdepend</artifactId>
            <version>2.9.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.maven.plugins</groupId>-->
        <!--            <artifactId>maven-source-plugin</artifactId>-->
        <!--            <version>3.2.1</version>-->
        <!--        </dependency>-->

        <!--         https://mvnrepository.com/artifact/javafx/javafx-->
        <!--        <dependency>-->
        <!--            <groupId>javafx</groupId>-->
        <!--            <artifactId>javafx</artifactId>-->
        <!--            <version>2.2.7</version>-->
        <!--        </dependency>-->


    </dependencies>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!--<scm>-->
    <!--<connection>scm:git:git@github.com:cmu-phil/tetrad.git</connection>-->
    <!--<url>scm:git:git@github.com:cmu-phil/tetrad.git</url>-->
    <!--<developerConnection>scm:git:git@github.com:cmu-phil/tetrad.git</developerConnection>-->
    <!--<tag>HEAD</tag>-->
    <!--</scm>-->

</project>
